--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   "author": "David Lima",
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/image": "^1.1.1",
-    "@chakra-ui/react": "^1.7.2",
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "framer-motion": "^5.3.3",
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/image": "^1.1.10",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "framer-motion": "^6.3.3",
     "g": "^2.0.1",
     "git": "^0.1.5",
     "init": "^0.1.2",
-    "next": "^12.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "next": "^12.1.5",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "three": "^0.140.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^12.0.4",
-    "prettier": "^2.5.0"
+    "eslint": "^8.14.0",
+    "eslint-config-next": "^12.1.5",
+    "prettier": "^2.6.2"
   }
 }
