--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
         "error",
         {
           "argsIgnorePattern": "^_`'",
-          "varsIgnorePattern": "^_"
+          "varsIgnorePattern": "^_,props,MyImage"
         }
       ],
       "react/display-name": 0
