--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,13 +2,8 @@
     "root": true,
     "extends": "next",
     "rules": {
-      "no-unused-vars": [
-        "error",
-        {
-          "argsIgnorePattern": "^_`'",
-          "varsIgnorePattern": "^_,props,MyImage"
-        }
-      ],
-      "react/display-name": 0
-    }
+      "react/no-unescaped-entities": "off",
+      "@next/next/no-page-custom-font": "off",
+      "no-unused-vars": "off"
+
   }
